--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -10,7 +10,10 @@
 // Core CSS
 @import "@{nodeModule}scaffolding.less";
 @import "@{nodeModule}type.less";
+@import "@{nodeModule}buttons.less";
+@import "@{nodeModule}close.less";
 @import "@{nodeModule}alerts.less";
+@import "@{nodeModule}modals.less";
 
 //overrides
 @import "overrides.less";
@@ -20,3 +23,4 @@
 @import "cartCoupons.less";
 @import "cartTotals.less";
 @import "cartFooter.less";
+@import "cartItemModal.less";
