--- a/app/styles/overrides.less
+++ b/app/styles/overrides.less
@@ -10,6 +10,11 @@
         display: none !important;
     }
 }
+.hide-mobile {
+    @media screen and (max-width: 776px) {
+        display: none !important;
+    }
+}
 
 .clearfix {
     &:before,
