--- a/app/styles/cartItemModal.less
+++ b/app/styles/cartItemModal.less
@@ -117,23 +117,26 @@
         width: 84px;
         height: 40px;
         border: 1px solid @border-color;
-        background: #fff url("../assets/select-caret.png") no-repeat center right;
         &:first-child {
             margin-left: 0;
+        }
+        .select-text-wrapper {
+            position: absolute;
+            width: 84px;
+            height: 40px;
+            top: -1px;
+            left: -1px;
+            pointer-events: none;
+            background: #FFFFFF url("../assets/select-caret.png") no-repeat center right;
         }
         .select-text {
             width: 62px;
             height: 40px;
             line-height: 40px;
-            background-color: #FFFFFF;
             display: block;
-            position: absolute;
             white-space: normal;
             overflow: hidden;
             text-overflow: ellipsis;
-            top: -1px;
-            left: -1px;
-            pointer-events: none;
             z-index: 2;
             padding-left: 9px;
             font-size: 12px;
