--- a/app/styles/cartItem.less
+++ b/app/styles/cartItem.less
@@ -124,6 +124,7 @@
                 .item-size {
                     font-size: 16px;
                     line-height: 18px;
+                    text-transform: uppercase;
                 }
             }
             &--qty {
