--- a/app/scripts/components/cartItem/cartItem.html
+++ b/app/scripts/components/cartItem/cartItem.html
@@ -51,9 +51,9 @@
     </div>
     <div class="s-cart-item-actions">
         <ul>
-            <li><a href="#" ng-click="editCartItem()" title="Edit or update current item" role="button">EDIT</a></li>
-            <li><a href="#" ng-click="removeItem($index)" title="Remove item from cart" role="button"><strong>X</strong> REMOVE</a></li>
-            <li><a href="#" ng-click="addToWishlist($index)" title="Save item for later" role="button">SAVE FOR LATER</a></li>
+            <li><a ng-href="javascript:void(0);" ng-click="editCartItem($event)" title="Edit or update current item" role="button">EDIT</a></li>
+            <li><a ng-href="javascript:void(0);" ng-click="removeItem($index)" title="Remove item from cart" role="button"><strong>X</strong> REMOVE</a></li>
+            <li><a ng-href="javascript:void(0);" ng-click="addToWishlist($index)" title="Save item for later" role="button">SAVE FOR LATER</a></li>
         </ul>
     </div>
 </div>
