--- a/app/styles/cartItemModal.less
+++ b/app/styles/cartItemModal.less
@@ -112,22 +112,55 @@
         display: inline-block;
         margin-left: 9px;
         padding: 0;
-        margin: 0;
-        overflow: hidden;
         width: 84px;
         height: 40px;
-        border: 1px solid @border-color;
         &:first-child {
             margin-left: 0;
         }
         .select-text-wrapper {
+            border: 1px solid @border-color;
             position: absolute;
             width: 84px;
             height: 40px;
-            top: -1px;
-            left: -1px;
+            top: 0;
+            left: 0;
+            cursor: pointer;
             pointer-events: none;
             background: #FFFFFF url("../assets/select-caret.png") no-repeat center right;
+        }
+        .select-dropdow{
+            width: 84px;
+            height: 100px;
+            overflow-y: auto;
+            overflow-x: hidden;
+            position: absolute;
+            top:39px;
+            left:-1px;
+            background: #FFFFFF;
+            border-color: @border-color;
+            border-width: 1px;
+            border-style: solid;
+            border-top: none;
+            display: none;
+
+            &.open{
+                display: block;
+            }
+
+            > ul {
+                margin: 0;
+                padding: 0;
+                list-style: none;
+
+                > li{
+                    text-align: left;
+                    padding: 0 10px;
+
+                    &.selected,&:hover{
+                        background-color: #CCCCCC;
+                    }
+                }
+            }
         }
         .select-text {
             width: 62px;
