Added CDN resources for angular bootstrap and html5 shim

--- a/app/styles/cartItemModal.less
+++ b/app/styles/cartItemModal.less
@@ -155,6 +155,7 @@
                 > li{
                     text-align: left;
                     padding: 0 10px;
+                    text-transform: uppercase;
 
                     &.selected,&:hover{
                         background-color: #CCCCCC;
